Added tailwind typography learnings

--- a/index.html
+++ b/index.html
@@ -661,7 +661,114 @@
         <div class="bg-slate-300 h-16 w-32 text-center border place-self-end">Box 4</div>
         <div class="bg-slate-300 h-16 w-32 text-center border">Box 5</div>
         <div class="bg-slate-300 h-16 w-32 text-center border">Box 6</div>
+    </div><br>
+    <div class="text-2xl">Typography</div>
+    <p>Font styles sans, serif, and mono. </p>
+    <div>
+        <p class="font-sans">Sans- Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, expedita?</p>
+        <p class="font-serif">Serif- Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, expedita?</p>
+        <p class="font-mono">Mono- Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, expedita?</p>
+    </div><br>
+    <p>Font size</p>
+    <div>
+        <p class="text-xs">Text-xs Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, impedit.</p>
+        <p class="text-sm">Text-sm Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam, repudiandae?</p>
+        <p class="text-base">Text-base Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, voluptates.</p>
+        <p class="text-lg">Text-lg Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, voluptates.</p>
+        <p>Font Style</p>
+        <p class="italic hover:not-italic">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+            reprehenderit.</p>
+    </div><br>
+    <p>Font weight</p>
+    <div>
+        <p class="font-thin">Font-thin Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, pariatur.</p>
+        <p class="font-extralight">Font-extralight Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Reprehenderit, doloribus!</p>
+        <p class="font-medium">Font-medium Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam,
+            inventore!</p>
+        <p class="font-bold">Font-bold Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, ab!</p>
+    </div><br>
+    <p>Letter Spacing</p>
+    <div>
+        <p class="tracking-light">Light spacing Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, modi.
+        </p>
+        <p class="tracking-normal">Normal spacing Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
+            aliquid.</p>
+        <p class="tracking-wide">Wide spacing Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
+            explicabo!</p>
+    </div><br>
+    <p>Line height</p>
+    <div>
+        <p class="leading-normal">Leading-normal Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
+            eligendi
+            dolorem dicta odio, consequuntur officiis consectetur hic, magni et eum suscipit. Tenetur est quo expedita
+            quam
+            nam commodi. Explicabo, consequuntur! Voluptatibus esse laboriosam provident earum dolor deleniti nesciunt
+            aperiam commodi porro eos! Odit asperiores vitae iste, quia accusantium minima quis.</p>
+        <p class="leading-loose">Leading-loose Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
+            tempora sed libero incidunt veritatis maiores, dolor dicta non odit commodi omnis aliquam! Eos repellat
+            nesciunt
+            sit quas dolores commodi, ullam labore rem, corporis quam obcaecati atque quisquam dignissimos magnam
+            cupiditate
+            eligendi veniam expedita aliquid ratione tempore placeat similique velit doloribus!</p>
+        <p class="leading-10">Leading-10 Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, molestias!
+            Alias nesciunt tempore provident voluptatum qui inventore tenetur natus necessitatibus mollitia repudiandae
+            reprehenderit enim minima consectetur porro dolore excepturi, maxime dicta beatae earum odit, vitae
+            delectus.
+            Architecto facilis consectetur error eius, blanditiis possimus non velit a officiis earum corrupti? Atque.
+        </p>
+    </div><br>
+    <p>Text align</p>
+    <div>
+        <p class="container mx-auto text-left ">Text align left Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Aliquam, sequi.</p>
+        <p class="container mx-auto text-center">Text align center Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Aliquam, sequi.</p>
+        <p class="container mx-auto text-right">Text align right Lorem, ipsum dolor sit amet consectetur adipisicing
+            elit. Aliquam, sequi.</p>
+        <p class="container mx-auto text-justify">Text align justify Lorem ipsum dolor sit amet consectetur, adipisicing
+            elit. Sapiente quos corporis doloremque error quaerat dignissimos quis. Iure cum pariatur in modi, odio
+            excepturi at quibusdam minima similique mollitia perspiciatis ab?.</p>
+    </div><br>
+    <p>Text Decoration</p>
+    <div>
+        <p class="underline">Underline Lorem ipsum dolor sit amet.</p><br>
+        <p class="overline">Overline Lorem ipsum dolor sit amet.</p><br>
+        <p class="line-through">Line through Lorem ipsum dolor sit amet.</p>
+    </div><br>
+    <p>Text decoration color</p>
+    <div>
+        <p>Underline decoration color Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias corporis tenetur
+            <a class="underline decoration-sky-500"> atque eligendi officia iusto</a> fuga nulla. Tempora, saepe quia.
+        </p>
+    </div><br>
+    <p>Text decoration offset</p>
+    <div><br>
+        <p class="underline underline-offset-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos,
+            asperiores!</p>
+    </div><br>
+    <p>Text decoration thickness</p>
+    <div>
+        <p class="underline decoration-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos,
+            asperiores!</p>
+    </div><br>
+    <p>Text transform</p>
+    <div>
+        <p class="uppercase">Uppercase Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores cumque
+            incidunt id nostrum velit provident, ipsa dolorem eum nobis repudiandae?</p>
+        <p class="lowercase">Lowercase Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis consequatur
+            hic facere dicta itaque, enim labore error repellat officia nihil!</p>
+        <p class="capitalize">Capitalize Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis corporis
+            accusantium quasi optio, sunt fugit reiciendis minima esse cumque maxime?</p>
+    </div><br>
+    <p>Text indent</p>
+    <div>
+        <p class="indent-10">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum, adipisci? Officia sed
+            facilis ex? Eligendi doloremque fugit optio et eveniet! Sed alias excepturi repellendus eligendi. Ab
+            quibusdam magni numquam deleniti eum laborum excepturi pariatur dolores repudiandae incidunt, fuga officiis
+            reprehenderit qui voluptatum inventore ut animi vero. Quasi earum maiores unde.</p>
     </div>
+
 
 </body>
 
